fixed browse page spacing (mobile)

--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -409,7 +409,7 @@ img {
 .category {
   width: 100%;
   max-width: 600px;
-  height: 300px;
+  height: auto;
   padding: 16px;
   margin: 0 auto;
   box-sizing: border-box;
